--- a/.gitignore
+++ b/.gitignore
@@ -164,12 +164,10 @@ cython_debug/
 # Custom
 /src/test.py
 
-/src/module/parser/analyser/tmdb_parser.py
-
 /src/module/run_debug.sh
 /src/module/debug_run.sh
 # /src/module/__version__.py
-/src/data/*
+/src/data/
 
 /src/module/conf/config_dev.ini
 
