--- a/.gitignore
+++ b/.gitignore
@@ -164,10 +164,10 @@ cython_debug/
 # Custom
 /backend/src/test.py
 
-/src/module/run_debug.sh
-/src/module/debug_run.sh
+/backend/src/module/run_debug.sh
+/backend/src/module/debug_run.sh
 # /src/module/__version__.py
-/src/data/
+/backend/src/data/
 
 /backend/src/module/conf/config_dev.ini
 
@@ -176,5 +176,5 @@ test.*
 
 # /src/templates/
 # /src/config/*
-/src/debuger.py
-/src/dist.zip
+/backend/src/debuger.py
+/backend/src/dist.zip
